syntax = "proto3";

package shortener;

option go_package = "pkg/proto";

message ShortURLRequest {
  string url = 1;
}

message ShortURLResponse {
  string shorten_url = 1;
}

message RedirectRequest {
  string shorten_url = 1;
}

message RedirectResponse {
  string url = 1;
}

message ShortenURLRequest {
  string url = 1;
}

message ShortenURLResponse {
  string result = 1;
}

message ShortenBatchURLRequest {
  repeated URL urls = 1;

  message URL {
    string correlation_id = 1;
    string original_url = 2;
  }
}

message ShortenBatchURLResponse {
  repeated URL urls = 1;

  message URL {
    string correlation_id = 1;
    string short_url = 2;
  }
}

message UsersURLsRequest {}

message UsersURLsResponse {
  repeated URL urls = 1;

  message URL {
    string correlation_id = 1;
    string original_url = 2;
  }
}

message DeleteRequest {
  repeated string codes = 1;
}

message DeleteResponse {
}

message StatsRequest {
}

message StatsResponse {
  int64 urls = 1;
  int64 users = 2;
}

service URLShortener {
    rpc ShortURL(ShortURLRequest) returns (ShortURLResponse);
    rpc Redirect(RedirectRequest) returns (RedirectResponse);
    rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
    rpc ShortenBatchURL(ShortenBatchURLRequest) returns (ShortenBatchURLResponse);
    rpc UsersURLs(UsersURLsRequest) returns (UsersURLsResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc Stats(StatsRequest) returns (StatsResponse);
}

